List records copy and paste error fix
